# drift-fw

./: .gitignore  .gitmodules  README.md
.github/ISSUE_TEMPLATE/: feature-name.md  issue-template.md
scripts/: camera_test.cpp  mavlink_test.cpp
src/drift-camera/: CMakeLists.txt  custom-build.sh
src/drift-camera/include/: camera.hpp  frame_buffer.hpp
src/drift-camera/src/: camera.cpp  drift_camera_main.cpp  frame_buffer.cpp
src/flight_control_app/: drone_controller.py
src/lidar-app/: CMakeLists.txt  custom-build.sh
src/lidar-app/include/: lidar.hpp
src/lidar-app/src/: lidar.cpp  lidar_app_main.cpp
